<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailFootballActivity"
        android:background="#549FAD">

    <android.support.design.widget.CoordinatorLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/id_description_football"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_white"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingBottom="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:orientation="horizontal"
                        android:layout_margin="16dp"
                        tools:ignore="UselessParent">

                    <ImageView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            tools:ignore="ContentDescription"
                            android:id="@+id/logoFootball"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:gravity="center_vertical"
                                android:id="@+id/nameFootball"
                                android:textSize="12sp"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:gravity="center_vertical"
                                android:id="@+id/yearFootball"
                                android:textSize="12sp"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:gravity="center_vertical"
                                android:id="@+id/countryFootball"
                                android:textSize="12sp"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:gravity="center_vertical"
                                android:id="@+id/websiteFootball"
                                android:textSize="12sp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    style="@style/CustomTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:background="@color/colorPrimary"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    tools:ignore="RtlHardcoded"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
                android:layout_marginTop="210dp"
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.CoordinatorLayout>

    <FrameLayout
            android:id="@+id/id_page_search_football"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@android:color/white"
            android:layout_alignTop="@+id/main_content">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_match"
                android:id="@+id/rv_football_search_match"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

    </FrameLayout>

</RelativeLayout>