<resources>
    <string name="app_name">FootballLeague</string>
    <string name="sampel">Sampel</string>
    <string name="nama_pertandingan">nama pertandingan</string>
    <string name="nama_file_pertandingan">nama file pertandingan</string>
    <string name="nama_tim">Nama tim</string>
    <string name="_1_1">%1d : %1d</string>
    <string name="score">Score</string>
    <string name="shot">Shot</string>
    <string name="formation">Formation</string>
    <string name="goal_detail">Goal Detail</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_favorite">Your Favorite</string>
    <string name="round">Round :</string>
    <string name="date">Date :</string>
    <string name="search_title">Search Match</string>
    <string name="search_hint">Cari</string>
</resources>
