<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <TextView
            android:id="@+id/toPageFavoriteFootball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_favorite"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
    />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_football"
            tools:listitem="@layout/item_view_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>